--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
+                                <h3><i class="fa fa-quote-left"></i> EXCELLENCE</h3>
                                 <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and
                                     praising pain was born and I will give you completed.</p>
                             </div>
@@ -227,9 +227,8 @@
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                <p class="lead">The master-builder of human happines no one rejects, dislikes avoids
-                                    pleasure itself, because it is very pursue pleasure. </p>
+                                <h3><i class="fa fa-quote-left"></i> TEAM PLAYER</h3>
+                                <p class="lead">Having worked with Xrole for years now, one thing I can say for sure is his ability to mastermind projects and take full ownership of that.</p>
                             </div>
                             <div class="testi-meta">
                                 <img src="uploads/chiekwu.png" alt="" class="img-fluid alignleft">
@@ -240,7 +239,7 @@
                         <!-- end testimonial -->
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
+                                <h3><i class="fa fa-quote-left"></i> INTEGRITY</h3>
                                 <p class="lead">They have got my project on time with the competition with a sed highly
                                     skilled, and experienced & professional team.</p>
                             </div>
