--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <!-- <img class="img-fluid" src="images/logogo-0.png.png" alt="Be kind!" /> -->
-                <p> <strong>#Be-Kind!</strong></p>
+                <p> Me: +234-9028-0140-55</p>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -204,7 +204,7 @@
                                 </p>
                             </div>
                             <div class="testi-meta">
-                                <img src="uploads/Ezeobika.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
+                                <img src="uploads/ezeobika.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
                                 <h4>Ezeobika Solomon <small>- Software Engineer, Andela Nigeria</small></h4>
                             </div>
                             <!-- end testi-meta -->
@@ -213,7 +213,7 @@
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> EXCELLENCE</h3>
+                                <h3><i class="fa fa-quote-left"></i> TEAM PLAYER</h3>
                                 <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and
                                     praising pain was born and I will give you completed.</p>
                             </div>
@@ -231,52 +231,13 @@
                                 <p class="lead">Having worked with Xrole for years now, one thing I can say for sure is his ability to mastermind projects and take full ownership of that.</p>
                             </div>
                             <div class="testi-meta">
-                                <img src="uploads/chiekwu.png" alt="" class="img-fluid alignleft">
+                                <img src="uploads/chiekwu.png" style = "border-radius: 50%;" alt="" class="img-fluid alignleft">
                                 <h4>Chiekwu Lisa <small>- CRO, Interswitch Nigeria</small></h4>
                             </div>
                             <!-- end testi-meta -->
                         </div>
                         <!-- end testimonial -->
-                        <div class="testimonial clearfix">
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> INTEGRITY</h3>
-                                <p class="lead">They have got my project on time with the competition with a sed highly
-                                    skilled, and experienced & professional team.</p>
-                            </div>
-                            <div class="testi-meta">
-                                <img src="uploads/testi_01.png" alt="" class="img-fluid alignleft">
-                                <h4>James Fernando <small>- Manager of Racer</small></h4>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
 
-                        <div class="testimonial clearfix">
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and
-                                    praising pain was born and I will give you completed.</p>
-                            </div>
-                            <div class="testi-meta">
-                                <img src="uploads/testi_02.png" alt="" class="img-fluid alignleft">
-                                <h4>Jacques Philips <small>- Designer</small></h4>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
-
-                        <div class="testimonial clearfix">
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                <p class="lead">The master-builder of human happines no one rejects, dislikes avoids
-                                    pleasure itself, because it is very pursue pleasure. </p>
-                            </div>
-                            <div class="testi-meta">
-                                <img src="uploads/testi_03.png" alt="" class="img-fluid alignleft">
-                                <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div><!-- end testimonial -->
                     </div><!-- end carousel -->
                 </div><!-- end col -->
             </div><!-- end row -->
