add contact to landing page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <!-- <img class="img-fluid" src="images/logogo-0.png.png" alt="Be kind!" /> -->
-                <p> Me: +234-9028-0140-55</p>
+                <p>+234-9028-0140-55</p>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -205,7 +205,7 @@
                             </div>
                             <div class="testi-meta">
                                 <img src="uploads/ezeobika.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
-                                <h4>Ezeobika Solomon <small>- Software Engineer, Andela Nigeria</small></h4>
+                                <h4>Ezeobika Solomon <small>- SE, Andela Nigeria</small></h4>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="testi-meta">
                                 <img src="uploads/balogun.png" style="border-radius: 59%;" alt="" class="img-fluid alignleft">
-                                <h4>Akeem Balogun <small>-Lead Dev, Mayflower-INC Canada </small></h4>
+                                <h4>Akeem Balogun <small>-LD, Mayflower-INC Canada </small></h4>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -254,7 +254,7 @@
                         <a href="#">Services</a>
                         <a href="#">Testimonials</a>
                     </p>
-                    <p class="footer-company-name ">All Rights Reserved. &copy; 2018 <a href="#">Xrole</a> 
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">Xrole</a> 
                 </div>
             </div>
         </div><!-- end container -->
