--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
                         <div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i> TEAM PLAYER</h3>
-                                <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and
-                                    praising pain was born and I will give you completed.</p>
+                                <p class="lead">Having worked with Xrole for years now, one thing I can say for sure is his ability to mastermind projects and take full ownership of that.</p>
                             </div>
                             <div class="testi-meta">
                                 <img src="uploads/balogun.png" style="border-radius: 59%;" alt="" class="img-fluid alignleft">
@@ -227,8 +226,8 @@
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> TEAM PLAYER</h3>
-                                <p class="lead">Having worked with Xrole for years now, one thing I can say for sure is his ability to mastermind projects and take full ownership of that.</p>
+                                <h3><i class="fa fa-quote-left"></i> EXCELLENCE </h3>
+                                <p class="lead">Speaking of this, he  has demostrated high degree of excellence during his career path. Hence, I will recommend him always without reservations.</p>
                             </div>
                             <div class="testi-meta">
                                 <img src="uploads/chiekwu.png" style = "border-radius: 50%;" alt="" class="img-fluid alignleft">
