add portfolio page

--- a/index.html
+++ b/index.html
@@ -185,6 +185,100 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
+    <div id="portfolio" class="section lb">
+		<div class="container">
+			<div class="section-title text-left">
+                <h3>Portfolio</h3>
+                <p>Below are some works on Frontend (Reactjs), Backend (Nodejs) as well as Cross Platform Mobile development (Flutter)</p>
+            </div><!-- end title -->
+
+			<!-- <div class="gallery-menu row">
+				<div class="col-md-12">
+					<div class="button-group filter-button-group text-left">
+						<button class="active" data-filter="*">All</button>
+						<button data-filter=".gal_a">Frontend</button>
+						<button data-filter=".gal_b">Backend</button>
+						<button data-filter=".gal_c">Tech Talks</button>
+					</div>
+				</div>
+			</div> -->
+
+			<div class="gallery-list row">
+				<div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+					<div class="gallery-single fix">
+						<img src="uploads/blueFlame.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/blueFlame.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+                    </div>
+                    <div style="margin: 0 auto 0 auto; text-align: center">
+                        <a href="http://blueflame-indoors.herokuapp.com/">BlueFlame Indoors (React)</a>
+                    </div>
+				</div>
+
+				<div class="col-md-4 col-sm-6 gallery-grid gal_c gal_b">
+					<div class="gallery-single fix">
+						<img src="uploads/uzotex.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/uzotex.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+                    </div>
+                    <div style="margin: 0 auto 0 auto; text-align: center">
+                        <a href="https://drive.google.com/drive/folders/1e7kevvNxMclt3Ov1ZdRR6fao29oDjrIw">Uzotex Blinds (Flutter)</a>
+                    </div>
+				</div>
+
+				<div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
+					<div class="gallery-single fix">
+						<img src="uploads/covid.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/covid.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+                    </div>
+                    <div style="margin: 0 auto 0 auto; text-align: center">
+                        <a href="https://drive.google.com/drive/u/0/folders/1e7kevvNxMclt3Ov1ZdRR6fao29oDjrIw">Covid-19 Update (Flutter)</a>
+                    </div>
+				</div>
+
+				<div class="col-md-4 col-sm-6 gallery-grid gal_b gal_a">
+					<div class="gallery-single fix">
+						<img src="uploads/storemanus.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/storemanus.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+                    </div>
+                    <div style="margin: 0 auto 0 auto; text-align: center">
+                        <a href="https://storemanus-frontend.herokuapp.com/">StoreManus (React)</a>
+                    </div>
+				</div>
+
+				<div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
+					<div class="gallery-single fix">
+						<img src="uploads/curtain-and-blind.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/curtain-and-blind-05.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+                    </div>
+                    <div style="margin: 0 auto 0 auto; text-align: center">
+                        <a href="https://github.com/XROLE/blueFlame-indoors-API">BlueFlame Indoors API (Nodejs)</a>
+                    </div>
+				</div>
+
+				<div class="col-md-4 col-sm-6 gallery-grid gal_c gal_a">
+					<div class="gallery-single fix">
+						<img src="uploads/storemanus-api.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/storemanus-api.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+                    </div>
+                    <div style="margin: 0 auto 0 auto; text-align: center">
+                        <a href="https://github.com/XROLE/storeManus/tree/develop">StoreManus (Nodejs)</a>
+                    </div>
+				</div>
+			</div>
+			</div>
+		</div>
+	</div>
 
     <div id="testimonials" class="section wb">
         <div class="container">
