add sharable link to apps

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 						</div>
                     </div>
                     <div style="margin: 0 auto 0 auto; text-align: center">
-                        <a href="https://drive.google.com/drive/folders/1e7kevvNxMclt3Ov1ZdRR6fao29oDjrIw">Uzotex Blinds (Flutter)</a>
+                        <a href="https://drive.google.com/file/d/1WKo0AYcurUiEBk4lNWJrh1un9_OmSCXw/view?usp=sharing">Uzotex Blinds (Flutter)</a>
                     </div>
 				</div>
 
@@ -236,7 +236,7 @@
 						</div>
                     </div>
                     <div style="margin: 0 auto 0 auto; text-align: center">
-                        <a href="https://drive.google.com/drive/u/0/folders/1e7kevvNxMclt3Ov1ZdRR6fao29oDjrIw">Covid-19 Update (Flutter)</a>
+                        <a href="https://drive.google.com/file/d/1RIBP6KvxYYN679ni2n0Z0H6xkcdXbk7S/view?usp=sharing">Covid-19 Update (Flutter)</a>
                     </div>
 				</div>
 
