--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                             has been my culture right from birth. When I am not coding, I love to be with family, friends, loved 
                             ones or engage in activities like playing table tennis and perhaps skating.
                         </p>
-                        <p> I am a beneficiary of Google Africa scholarship 2018, with over two years of experience and still 
-                            counting in Software Engineering. I've worked with companies like Andela, NESA by Makers and others.
-                            Currently I serve as mentor in Andla Learning Community and also the owner of TerminalDevs.
+                        <p> I am a beneficiary of Google Africa scholarship 2018, with over three years of experience and still 
+                            counting in Software Engineering. I've worked with companies like NESA by Makers, Local shelf, Andela and others.
+                            Currently, I work with ChurchPad as assistant Team Lead (Cross platform mobile app with Flutter) and mentor in Andla Learning Community.
                         </p>
 
                     </div><!-- end messagebox -->
