--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </p>
                         <p> I am a beneficiary of Google Africa scholarship 2018, with over three years of experience and still 
                             counting in Software Engineering. I've worked with companies like NESA by Makers, Local shelf, Andela and others.
-                            Currently, I work with ChurchPad as assistant Team Lead (Cross platform mobile app with Flutter) and mentor in Andla Learning Community.
+                            Currently, I work with ChurchPad as assistant Team Lead (Cross platform mobile app with Flutter) and mentor in Andela Learning Community.
                         </p>
 
                     </div><!-- end messagebox -->
