--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             </div>
                             <div class="testi-meta">
                                 <img src="uploads/ezeobika.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
-                                <h4>Ezeobika Solomon <small>- SE, Andela Nigeria</small></h4>
+                                <h4>John Obi<small>- SE, Jinger/small></h4>
                             </div>
                             <!-- end testi-meta -->
                         </div>
