update ismail profile pix

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                                 </p>
                             </div>
                             <div class="testi-meta">
-                                <img src="uploads/ezeobika.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
-                                <h4>John Obi<small>- SE, Jinger/small></h4>
+                                <img src="uploads/ismail.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
+                                <h4>Ibrahim Ismail<small>- SSE, Prunedge Ventures></h4>
                             </div>
                             <!-- end testi-meta -->
                         </div>
