update profile image to square size

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                 </p>
                             </div>
                             <div class="testi-meta">
-                                <img src="uploads/ismail.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
+                                <img src="uploads/ismail2.png"  style="border-radius: 50%;"alt="" class="img-fluid alignleft">
                                 <h4>Ibrahim Ismail<small>- SSE, Prunedge Ventures></h4>
                             </div>
                             <!-- end testi-meta -->
