--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
     <section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.png')">
         <div class="heading">
             <h1>hello i'm Xrole</h1>
-            <p> "I am an ardent Software Engineer who loves <br> to leverage on modern day technology in solving
+            <p> "I am an ardent Software Engineer who loves <br> to leverage modern day technology in solving
                 problems"</p>
             <h3 class="cd-headline clip is-full-width">
                 <span>Areas of expertise </span>
                 <span class="cd-words-wrapper">
                     <b class="is-visible">Flutter (Dart) </b>
                     <b> version control (Git)</b>
-                    <b>Automated Testing</b>
+                    <b>Reactjs</b>
                 </span>
             </h3>
         </div>
@@ -127,18 +127,16 @@
                         <h2>About Xrole.</h2>
                         <p> I am techie and passionate about problem solving. A typical day for me, is a day spent in
                             coding
-                            and learning of newer technologies. At the very basic, seeking, acquiring and exhibiting
+                            and learning newer technologies. At the very basic, seeking, acquiring and exhibiting
                             knowledge
                             has been my culture right from birth. When I am not coding, I love to be with family,
                             friends, loved
                             ones or engage in activities like playing table tennis and perhaps skating.
                         </p>
-                        <p> I am a beneficiary of Google Africa scholarship 2018, with over three years of experience
+                        <p> I am a beneficiary of Google Africa scholarship 2018, with over five years of experience
                             and still
-                            counting in Software Engineering. I've worked with companies like NESA by Makers, Local
-                            shelf, Andela and others.
-                            Currently, I work with ChurchPad as assistant Team Lead (Cross platform mobile app with
-                            Flutter) and mentor in Andela Learning Community.
+                            counting in Software Engineering. I've worked with companies like Andela (Buil internal tools e.g Activo - for space management), ChurchPad (Built an automated Church management system) and Kippa Africa (Built a intuitive book management app).
+                            Currently, I work with HoshisTech as the Mobile Team Lead to build the ibloov Merchant app and also as mentor in Andela Learning Community.
                         </p>
 
                     </div><!-- end messagebox -->
@@ -228,14 +226,14 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
                     <div class="gallery-single fix">
-                        <img src="uploads/shared_bills_manager.png" class="img-fluid" alt="Image">
+                        <img src="uploads/kippa_2.png" class="img-fluid" alt="Image">
                         <div class="img-overlay">
-                            <a href="uploads/shared_bills.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                            <a href="uploads/kippa.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
                                     class="fa fa-picture-o"></i></a>
                         </div>
                     </div>
                     <div style="margin: 0 auto 0 auto; text-align: center">
-                        <a href="https://github.com/XROLE/share_bills_manager" target="_blank">Shared Bills Manager (Github)</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.africave.kippa" target="_blank">Kippa (Play Store)</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 gallery-grid gal_c gal_b">
